// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditIcon: Component should render correctly 1`] = `
<edit.svg
  style={
    Object {
      "fill": "#FFF",
      "height": "30px",
      "width": "30px",
    }
  }
/>
`;

exports[`EditIcon: Component should render with custom styles 1`] = `
<edit.svg
  style={
    Object {
      "fill": "blue",
      "height": "30px",
      "width": "30px",
    }
  }
/>
`;
